<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/light_green_500"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/matchday_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/round"
                android:textColor="@android:color/white"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/league_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:contentDescription="@string/league"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/League" />

            <ImageView
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:contentDescription="@string/share_desc"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_share_white_24dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/home_crest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/logo"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/home_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/team_name"
                    android:layout_marginTop="5dp"

                    android:gravity="center"
                    android:text="@string/test_text"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/TeamNames" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/score_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:contentDescription="@string/final_score"
                    android:text="@string/test_text"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/Score" />

                <TextView
                    android:id="@+id/data_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:contentDescription="@string/match_timigs"
                    android:text="@string/test_text"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/away_crest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/logo"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/away_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/team_name"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/test_text"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/TeamNames" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>


