<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin"
    android:elevation="4dp"
    android:id="@+id/widget"
    android:background="@android:color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/today_score"
        android:textSize="15sp"
        android:contentDescription="@string/widget_header"
        android:gravity="start|center"
        android:drawableStart="@drawable/ic_launcher"
        android:drawableLeft="@drawable/ic_launcher"
        android:drawablePadding="10dp"
        android:background="@color/light_green_500"
        android:textColor="@android:color/white"/>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scores_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="5dp" />

        <TextView
            android:id="@+id/emptyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_data"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </FrameLayout>

</LinearLayout>